# VoiceLab-Pro

./: .gitignore  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  cartesia.py  stt.py  tts.py
backend/app/models/: __init__.py  tts_request.py  user.py
backend/app/schemas/: __init__.py  auth.py  tts.py
backend/app/services/: auth_service.py  cartesia_service.py  elevenlabs_service.py
backend/app/utils/: credentials.json  jwt.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  proxy.js  tailwind.config.js
frontend/app/: layout.js  page.js
frontend/app/about/: page.js
frontend/app/api/auth/login/: route.js
frontend/app/api/auth/logout/: route.js
frontend/app/api/auth/me/: route.js
frontend/app/api/cartesia/generate/: route.js
frontend/app/api/cartesia/languages/: route.js
frontend/app/api/cartesia/models/: route.js
frontend/app/api/cartesia/voices/: route.js
frontend/app/login/: page.js
frontend/app/providers/: page.js
frontend/app/stt/: page.js
frontend/app/tts/: page.js
frontend/app/tts/cartesia/: page.js
frontend/app/tts/elevenlabs/: page.js
frontend/components/: AnimatedSpeaker.js  AuthProvider.js  ErrorBoundary.js  Footer.js  LoadingSkeleton.js  Navbar.js  ProtectedRoute.js  Toast.js  Tooltip.js
frontend/lib/: api.js  utils.js
frontend/styles/: globals.css
(+2 files in other folders)
